--- a/StageStory/Views/Shared/_Layout.cshtml
+++ b/StageStory/Views/Shared/_Layout.cshtml
@@ -6,8 +6,10 @@
     <title>@ViewData["Title"] - StageStory</title>
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/StageStory.styles.css" asp-append-version="true" />
+    @* <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" /> *@
+    @* <link rel="stylesheet" href="~/StageStory.styles.css" asp-append-version="true" /> *@
+    <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
+
 
 </head>
 <body>
