--- a/StageStory/Views/Home/Index.cshtml
+++ b/StageStory/Views/Home/Index.cshtml
@@ -15,39 +15,7 @@
 </head>
 <body>
     <!-- Navigation moderne -->
-    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <i class="bi bi-journal-bookmark-fill me-2"></i>
-                Story Stage
-            </a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/">Accueil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Stages</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Statistiques</a>
-                    </li>
-                </ul>
-
-                <div class="user-info">
-                    <div class="user-avatar">
-                        <i class="bi bi-person-fill"></i>
-                    </div>
-                    <span>Bonjour, Étudiant!</span>
-                </div>
-            </div>
-        </div>
-    </nav>
+   
 
     <!-- Hero section améliorée -->
     <section class="hero-section">
@@ -161,7 +129,9 @@
 
                                 <div class="mb-3">
                                     <label class="form-label fw-bold">Entreprise</label>
-                                    <select asp-for="EntrepriseId" class="form-select" asp-items="ViewBag.EntrepriseList"></select>
+                                    <select asp-for="EntrepriseId" class="form-select" asp-items="ViewBag.EntrepriseList">
+                                        <option>--Selectionnez une entreprise--</option>
+                                    </select>
                                 </div>
 
                                 <div class="mb-3">
