--- a/StageStory/Views/Shared/_Layout.cshtml
+++ b/StageStory/Views/Shared/_Layout.cshtml
@@ -9,12 +9,44 @@
     @* <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" /> *@
     <link rel="stylesheet" type="text/css" href="~/css/bootstrap@5.3.8/bootstrap.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="~/css/index.css" />
 </head>
 <body>
-    <header>
-    </header>
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <i class="bi bi-journal-bookmark-fill me-2"></i>
+                Story Stage
+            </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/">Accueil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Internships/Index">Stages</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Enterprises/Index">Statistiques</a>
+                    </li>
+                </ul>
+
+                <div class="user-info">
+                    <div class="user-avatar">
+                        <i class="bi bi-person-fill"></i>
+                    </div>
+                    <span>Bonjour, Étudiant!</span>
+                </div>
+            </div>
+        </div>
+    </nav>
     <div class="">
-        <main >
+        <main class="mx-2">
             @RenderBody()
         </main>
     </div>
