ajout de la liste des entreprises

--- a/StageStory/Views/Home/Index.cshtml
+++ b/StageStory/Views/Home/Index.cshtml
@@ -138,6 +138,7 @@
                                     <label class="form-label fw-bold">Type de convention</label>
                                     <select asp-for="SignatureType" class="form-select"
                                             asp-items="Html.GetEnumSelectList<ConventionTypeEnum>()">
+                                                <option>-- Selectionnez un type de convention --</option>
                                     </select>
                                 </div>
 
@@ -303,6 +304,7 @@
                         Story Stage
                     </h5>
                     <p class="text-light">La plateforme d'évaluation de stages pour partager vos expériences et aider la communauté étudiante.</p>
+                    <p>Made by Louyama Tech</p>
                 </div>
                 <div class="col-lg-2 col-md-6 mb-4">
                     <h6>Navigation</h6>
@@ -325,8 +327,8 @@
                     <h6>Contact</h6>
                     <div class="footer-links">
                         <a href="#"><i class="bi bi-envelope me-2"></i>contact@storystage.fr</a>
-                        <a href="#"><i class="bi bi-telephone me-2"></i>+33 1 23 45 67 89</a>
-                        <a href="#"><i class="bi bi-geo-alt me-2"></i>Paris, France</a>
+                        <a href="#"><i class="bi bi-telephone me-2"></i>+771233252</a>
+                        <a href="#"><i class="bi bi-geo-alt me-2"></i>Dakar, Senegal</a>
                     </div>
                 </div>
             </div>
