modification de la methode de creation intership

--- a/StageStory/Views/Home/Index.cshtml
+++ b/StageStory/Views/Home/Index.cshtml
@@ -76,7 +76,7 @@
                             <h3><i class="bi bi-plus-circle"></i>Nouveau stage</h3>
                         </div>
                         <div class="card-body p-4">
-                            <form id="internshipForm" method="post" asp-controller="Internships" asp-action="Create">
+                            <form id="internshipForm" method="post">
 
                                 <div class="mb-3">
                                     <label class="form-label fw-bold">Nom du stage</label>
