--- a/StageStory/Views/Shared/_Layout.cshtml
+++ b/StageStory/Views/Shared/_Layout.cshtml
@@ -59,6 +59,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/custom-script.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 <script src="~/js/bootstrap@5.3.8/bootstrap.js"></script>
